--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<script>jwplayer.key="eXOYv70vSU6d2dciCKOoDCFCMZxmaaLNnqBl"</script>
 </head>
 <body>
+	<h1>Journey by Music</h1>
+	<h4>Directed by Michael Gonzales, Original Music by Andy Lim</h4>
 	<div id="myElement"></div>
 	<script type="text/JavaScript">
 	var playerInstance = jwplayer("myElement");
