--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	var playerInstance = jwplayer("myElement");
 	playerInstance.setup({
 	    file: "http://content.jwplatform.com/videos/21IqGyBC-ug4Jp07u.mp4"
+	    image: "http://content.jwplatform.com/thumbs/21IqGyBC-320.jpg"
+	    skin: {
+			    "name": "myskin"
+			   }
 	});
 	</script>
 </body>
