--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<script type="text/JavaScript">
 	var playerInstance = jwplayer("myElement");
 	playerInstance.setup({
-	    file: "http://content.jwplatform.com/videos/21IqGyBC-ug4Jp07u.mp4"
-	    image: "http://content.jwplatform.com/thumbs/21IqGyBC-320.jpg"
+	    file: "http://content.jwplatform.com/videos/21IqGyBC-ug4Jp07u.mp4",
+	    image: "http://content.jwplatform.com/thumbs/21IqGyBC-320.jpg",
 	    skin: {
 			    "name": "myskin"
 			   }
