--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	    file: "http://content.jwplatform.com/videos/21IqGyBC-ug4Jp07u.mp4",
 	    image: "http://content.jwplatform.com/thumbs/21IqGyBC-320.jpg",
 	    skin: {
-			    "name": "myskin"
+			    "name": "mkgo"
 			   }
 	});
 	</script>
