--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="skin.css"> </link>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> </link>
 	<script src="jwplayer-7.3.6/jwplayer.js"></script>
 	<script>jwplayer.key="eXOYv70vSU6d2dciCKOoDCFCMZxmaaLNnqBl"</script>
 </head>
 <body>
-	<h1>Journey by Music</h1>
-	<h4>Directed by Michael Gonzales, Original Music by Andy Lim</h4>
-	<div id="myElement"></div>
+	<div class="row">
+		<div class = "col-md-6 col-md-offset-3">
+			<h1>Journey by Music</h1>
+			<h4>Directed by Michael Gonzales, Original Music by Andy Lim</h4>
+			<div id="myElement"></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class = "col-md-6 col-md-offset-3">
+			<div id="myElement"></div>
+		</div>
+	</div>
 	<script type="text/JavaScript">
 	var playerInstance = jwplayer("myElement");
 	playerInstance.setup({
