--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<script>jwplayer.key="eXOYv70vSU6d2dciCKOoDCFCMZxmaaLNnqBl"</script>
 </head>
 <body>
+	<!-- Pure CSS Paralax Pixel Star Effect taken from http://codepen.io/saransh/pen/BKJun Made by @screenshake-->
+	<div id='stars'></div>
+	<div id='stars2'></div>
+	<!--<div id='stars3'></div>-->
 	<div class="row">
 		<div class = "col-md-6 col-md-offset-3">
 			<h1>Journey by Music</h1>
