--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 	    skin: {
 			    "name": "mkgo"
 			  },
+		tracks: [{ 
+            file: "captions.vtt", 
+            label: "English",
+            kind: "captions",
+            "default": true 
+        },
 		sharing: {
 				    "sites": ["reddit","facebook","twitter"]
 				 }
